--- a/blog.html
+++ b/blog.html
@@ -130,7 +130,7 @@
               <img class="img-fluid" src="img/blog/blog-11.webp"  alt="" />
               <div class="p-4">
                 <div class="d-flex justify-content-between mb-4">
-                  <div class="d-flex align-items-center">
+                  <div class="d-flex align-items-center wow fadeInUp" data-wow-delay="0.3s">
                     <img
                       class="rounded-circle me-2"
                       src="img/user.jpg"
@@ -138,25 +138,27 @@
                       height="35"
                       alt=""
                     />
-                    <span>Sabujan Bikram Shah</span>
+                    <span class="wow fadeInUp" data-wow-delay="0.4s">Sabujan Bikram Shah</span>
                   </div>
                   <div class="d-flex align-items-center">
-                    <span class="ms-3"
+                    <span class="ms-3 wow fadeInUp" data-wow-delay="0.5s"
                       ><i class="far fa-calendar-alt text-primary me-2"></i>11
                       Sep, 2024</span
                     >
                   </div>
                 </div>
-                <h4 class="text-uppercase mb-3">
-                  <span class="text-primary"> Leading construction Company</span> in Nepal
+                <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">
+                  <a href="blog-1.html">
+                     Leading construction Company<span style="color: #F8C633;"> in Nepal</span>
+                  </a>
                 </h4>
-                <a class="text-uppercase fw-bold" href="blog-1.html"
+                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="blog-1.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
             <div class="bg-yellow">
               <img class="img-fluid" src="img/blog/blog-5.webp" alt="" />
               <div class="p-4">
@@ -170,19 +172,22 @@
                       alt=""
                     />
   
-                    <span>Sabujan Bikram Shah</span>
+                    <span class="wow fadeInUp" data-wow-delay="0.4s">Sabujan Bikram Shah</span>
                   </div>
                   <div class="d-flex align-items-center">
-                    <span class="ms-3"
+                    <span class="ms-3 wow fadeInUp" data-wow-delay="0.4s"
                       ><i class="far fa-calendar-alt text-primary me-2"></i>11
                       Sep, 2024</span
                     >
                   </div>
                 </div>
-                <h4 class="text-uppercase mb-3">
+                <a href="blog-2.html">
+                <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">
+                  
                  <span class="text-primary"> Cost of Building a House in Nepal:</span> Budgeting Guidelines
                 </h4>
-                <a class="text-uppercase fw-bold" href="blog-2.html"
+                </a>
+                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.5s" href="blog-2.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -201,19 +206,21 @@
                       height="35"
                       alt=""
                     />
-                    <span>Sabujan Bikram Shah</span>
+                    <span class="wow fadeInUp" data-wow-delay="0.4s">Sabujan Bikram Shah</span>
                   </div>
                   <div class="d-flex align-items-center">
-                    <span class="ms-3"
+                    <span class="ms-3 wow fadeInUp" data-wow-delay="0.4s"
                       ><i class="far fa-calendar-alt text-primary me-2"></i>11
                       Sep, 2024</span
                     >
                   </div>
                 </div>
-                <h4 class="text-uppercase mb-3">
+                <a href="blog-3.html">
+                <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">
                   <span class="text-primary">Build Wise, Build Strong:</span> Why Choose Pillar Construction in Nepal?
                 </h4>
-                <a class="text-uppercase fw-bold" href="blog-3.html"
+                </a>
+                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="blog-3.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -226,14 +233,16 @@
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
+                                <span class="wow fadeInUp" data-wow-delay="0.4s">Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
+                                <span class="ms-3 wow fadeInUp" data-wow-delay="0.5s"><i class="far fa-calendar-alt text-primary me-2 "></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">The Essence of <span class="text-primary"> Nepali Architecture</span></h4>
-                        <a class="text-uppercase fw-bold" href="blog-4.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a href="blog-4.html">
+                        <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.6s">The Essence of <span class="text-primary"> Nepali Architecture</span></h4>
+                        </a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="blog-4.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -244,32 +253,36 @@
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
+                                <span class="wow fadeInUp" data-wow-delay="0.7s">Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
+                                <span class="ms-3 wow fadeInUp" data-wow-delay="0.7s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">The Resilience of <span class="text-primary"> Bhaktapur’s Architecture</span></h4>
-                        <a class="text-uppercase fw-bold" href="blog-5.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a href="blog-5.html">
+                        <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.9s">The Resilience of <span class="text-primary"> Bhaktapur’s Architecture</span></h4>
+                        </a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.9s" href="blog-5.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.7s">
+            <div class="col-lg-4 col-md-6 wow fadeInRight" data-wow-delay="0.6s">
                 <div class="bg-yellow">
                     <img class="img-fluid" src="img/blog/b-1.webp" alt="">
                     <div class="p-4">
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
+                                <span class="wow fadeInUp" data-wow-delay="0.6s">Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
+                                <span class="ms-3 wow fadeInUp" data-wow-delay="0.6s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Traditional Newari Houses: <span class="text-primary"> A Model of Sustainability</span></h4>
-                        <a class="text-uppercase fw-bold" href="blog-6.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a href="blog-6.html">
+                        <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.6s">Traditional Newari Houses: <span class="text-primary"> A Model of Sustainability</span></h4>
+                        </a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="blog-6.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -280,14 +293,16 @@
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
+                                <span class="wow fadeInUp" data-wow-delay="0.6s">Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
+                                <span class="ms-3 wow fadeInUp" data-wow-delay="0.4s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">The Unique Charm of <span class="text-primary"> Wooden Carvings</span></h4>
-                        <a class="text-uppercase fw-bold" href="blog-7.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a href="blog-7.html">
+                        <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">The Unique Charm of <span class="text-primary"> Wooden Carvings</span></h4>
+                        </a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="blog-7.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -298,14 +313,16 @@
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
+                                <span class="wow fadeInUp" data-wow-delay="0.5s">Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
+                                <span class="ms-3 wow fadeInUp" data-wow-delay="0.5s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Pagoda-Style Temples: <span class="text-primary"> A Glimpse into Spirituality</span></h4>
-                        <a class="text-uppercase fw-bold" href="blog-8.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a href="blog-8.html">
+                        <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.6s">Pagoda-Style Temples: <span class="text-primary"> A Glimpse into Spirituality</span></h4>
+                        </a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="blog-8.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -316,14 +333,16 @@
                         <div class="d-flex justify-content-between mb-4">
                             <div class="d-flex align-items-center">
                                 <img class="rounded-circle me-2" src="img/user.jpg" width="35" height="35" alt="">
-                                <span>Sabujan Bikram Shah</span>
+                                <span class="wow fadeInUp" data-wow-delay="0.5s">Sabujan Bikram Shah</span>
                             </div>
                             <div class="d-flex align-items-center">
-                                <span class="ms-3"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
+                                <span class="ms-3 wow fadeInUp" data-wow-delay="0.5s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <h4 class="text-uppercase mb-3">Symbolism and Spiritual <span class="text-primary"> Significance of pagoda</span></h4>
-                        <a class="text-uppercase fw-bold" href="blog-9.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a href="blog-9.html">
+                        <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.6s">Symbolism and Spiritual <span class="text-primary"> Significance of pagoda</span></h4>
+                        </a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="blog-9.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
