--- a/index.html
+++ b/index.html
@@ -725,9 +725,11 @@
                   >
                 </div>
               </div>
+              <a href="blog-1.html">
               <h4 class="text-uppercase mb-3">
                 <span class="text-primary"> Leading construction Company</span> in Kathmandu
               </h4>
+              </a>
               <a class="text-uppercase fw-bold" href="blog-1.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
@@ -757,9 +759,11 @@
                   >
                 </div>
               </div>
+              <a href="blog-2.html">
               <h4 class="text-uppercase mb-3">
                <span class="text-primary"> Cost of Building a House in Nepal:</span> Budgeting Guidelines
               </h4>
+              </a>
               <a class="text-uppercase fw-bold" href="blog-2.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
@@ -788,9 +792,11 @@
                   >
                 </div>
               </div>
+              <a href="blog-3.html">
               <h4 class="text-uppercase mb-3">
                 <span class="text-primary">Build Wise, Build Strong:</span> Why Choose Pillar Construction in Nepal?
               </h4>
+              </a>
               <a class="text-uppercase fw-bold" href="blog-3.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
