--- a/index.html
+++ b/index.html
@@ -783,21 +783,21 @@
                     height="35"
                     alt=""
                   />
-                  <span>Sabujan Bikram Shah</span>
+                  <span class="wow fadeInUp" data-wow-delay="0.5s">Sabujan Bikram Shah</span>
                 </div>
                 <div class="d-flex align-items-center">
-                  <span class="ms-3"
+                  <span class="ms-3 wow fadeInUp" data-wow-delay="0.5s"
                     ><i class="far fa-calendar-alt text-primary me-2"></i>11
                     Sep, 2024</span
                   >
                 </div>
               </div>
               <a href="blog-3.html">
-              <h4 class="text-uppercase mb-3">
+              <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.5s">
                 <span class="text-primary">Build Wise, Build Strong:</span> Why Choose Pillar Construction in Nepal?
               </h4>
               </a>
-              <a class="text-uppercase fw-bold" href="blog-3.html"
+              <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.3s" href="blog-3.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
             </div>
