--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
           <form action="https://api.web3forms.com/submit"
           method="POST">
             <div class="row g-3">
-              <div class="col-12 col-sm-6 wow fadeInLeft" data-wow-delay="0.6s">
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
                 <input
                     type="hidden"
                     name="access_key"
@@ -435,7 +435,7 @@
                   style="height: 55px" required
                 />
               </div>
-              <div class="col-12 col-sm-6 wow fadeInRight" data-wow-delay="0.6s">
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
                 <input
                   type="email"
                   id="email"
@@ -445,7 +445,7 @@
                   name="Email Address" required
                 />
               </div>
-              <div class="col-12 col-sm-6 wow fadeInLeft" data-wow-delay="0.7s">
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
                 <input
                   type="text"
                   id="subject"
@@ -455,7 +455,7 @@
                   name="Subject" required
                 />
               </div>
-              <div class="col-12 col-sm-6 wow fadeInRight" data-wow-delay="0.7s">
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
                 <input
                   type="number"
                   id="contact-number"
@@ -466,7 +466,7 @@
                 />
               </div>
 
-              <div class="col-12 wow fadeInUp" data-wow-delay="0.8s">
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
                 <textarea
                   class="form-control border-0"
                   rows="5"
@@ -480,7 +480,7 @@
                 name="redirect"
                 value="https://www.ysbuilders.com.np/thanks.html"
               />
-              <div class="h-captcha wow fadeInUp" data-wow-delay="0.8s" data-captcha="true"></div>
+              <div class="h-captcha" data-captcha="true"></div>
               <input
                 type="checkbox"
                 name="botcheck"
@@ -538,9 +538,9 @@
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
-              src="img/project/project-57.jpg"
+              src="img/project/project-7.jpg"
               alt=""
-              style="min-height: 340px"
+              style="min-height: 340px;"
             />
             <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
@@ -580,7 +580,7 @@
           <div class="position-relative portfolio-box">
             <img
               class="img-fluid w-100"
-              src="img/project/project-22.jpg"
+              src="img/project/project-60.jpg"
               alt=""
               style="min-height: 340px"
             />
@@ -590,7 +590,7 @@
                     </a> -->
             <a
               class="portfolio-btn"
-              href="img/project/project-5.jpg"
+              href="img/project/project-60.jpg"
               data-lightbox="portfolio"
             >
               <i class="bi bi-plus text-white"></i>
