--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <title>YS Builders Construction Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="YS Builders Construction Company" name="keywords" />
-    <meta content="YS Builders Construction Company" name="description" />
+    <meta content="Construction-Company General-Contractor Home-Builders Commercial construction
+    Residential construction
+    Building contractors
+    Renovation services
+    Nepalgunj Construction Nepalgunj-Home-Builders Nepalgunj-General-Contractor Nepalgunj-Renovation-Services Nepalgunj-Commercial-Builders" name="keywords" />
+    <meta content="YS Builders is construction" name="description" />
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
