--- a/about.html
+++ b/about.html
@@ -210,10 +210,10 @@
           </div>
         </div>
       </div>
-      <br/>
+      <br />
       <div class="row g-5">
         <div class="col-lg-12">
-          <h3 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.5s">
+          <h3 class="text-uppercase mb-2 wow fadeInUp" data-wow-delay="0.5s">
             Government <span class="text-primary">Projects:</span>
           </h3>
           <div class="col-12 wow fadeInUp" data-wow-delay="0.6s">
@@ -228,7 +228,7 @@
               project meets the highest standards of quality and safety.
             </p>
           </div>
-          <h3 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.7s">
+          <h3 class="text-uppercase mb-2 wow fadeInUp" data-wow-delay="0.7s">
             Private <span class="text-primary">Projects:</span>
           </h3>
           <div class="col-12 wow fadeInUp" data-wow-delay="0.8s">
@@ -240,6 +240,18 @@
               focus on efficiency, customization, and innovation ensures that we
               meet the unique needs of every client, from individual homeowners
               to large corporations.
+            </p>
+          </div>
+          <h3 class="text-uppercase mb-2 wow fadeInUp" data-wow-delay="0.7s">
+            Commitment to <span class="text-primary">Growth</span>
+          </h3>
+          <div class="col-12 wow fadeInUp" data-wow-delay="0.8s">
+            <p>
+              By engaging in both sectors, YS Builders demonstrates its
+              dedication to fulfilling Nepal's diverse infrastructure needs. Our
+              work significantly contributes to the country's growth and
+              development, reinforcing our role as a trusted partner in building
+              a better future for all.
             </p>
           </div>
         </div>
