--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="utf-8" />
     <title>YS Builders Construction Company</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+   
     <meta
       content="Construction Company, General-Contractor, Home Builders, Commercial construction, Residential construction,
     Building contractors,
     Renovation services,
-    Nepalgunj Construction, Nepalgunj Home Builders, Nepalgunj-General-Contractor, Nepalgunj-Renovation-Services, Nepalgunj-Commercial-Builders"
+    Nepalgunj Construction, Nepalgunj Home Builders, Nepalgunj General Contractor, Nepalgunj Renovation Services, Nepalgunj Csommercial Builders"
       name="keywords"
     />
-    <meta content="YS Builders is construction" name="description" />
+    <meta content="YS Builders established in 2066 BS(2009 AD), is positioned as a key player in the construction industry, with a focus on both government and private sector projects. Operating from its main office in Nepalgunj and a sub-office in Kupondole, Lalitpur, the company is well-placed to serve both western and central regions of Nepal." name="description" />
+    <link rel="canonical" href="https://www.ysbuilders.com.np/" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Top Home Construction in Kathmandu Nepal | YS Builders Construction Company" />
+    <meta property="og:description" content="Looking for reliable home construction in Kathmandu Nepal? Our expert builders offer quality and exceptional services. Get your dream home built today!" />
+    <meta property="og:url" content="https://www.ysbuilders.com.np/" />
+
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
