--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>YS Builders Construction Company</title>
+    <title>YS Builders Construction Company | Building Excellence in Nepal</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
    
     <meta
@@ -16,7 +16,7 @@
     <link rel="canonical" href="https://www.ysbuilders.com.np/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Top Home Construction in Kathmandu Nepal | YS Builders Construction Company" />
+    <meta property="og:title" content="Top Construction Company in Nepal | YS Builders Construction Company" />
     <meta property="og:description" content="Looking for reliable home construction in Kathmandu Nepal? Our expert builders offer quality and exceptional services. Get your dream home built today!" />
     <meta property="og:url" content="https://www.ysbuilders.com.np/" />
 
