--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
             <a href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9" target="_blank">
               <div class="text-start">
-                <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
+                <p class="text-uppercase text-primary fw-bold">Our Office</p>
                 <span>Kupondole, Lalitpur, Nepal</span>
               </div>
             </a>
@@ -89,7 +89,7 @@
           <div class="d-inline-flex align-items-center">
             <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
             <div class="text-start">
-              <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
+              <p class="text-uppercase text-primary fw-bold">Email Us</p>
 
               <span
                 ><a href="mailto:ysbuilders075@gmail.com"
@@ -103,7 +103,7 @@
           <div class="d-inline-flex align-items-center">
             <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
             <div class="text-start">
-              <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
+              <p class="text-uppercase text-primary fw-bold">Call Us</p>
               <span><a href="tel://+9779860915451"> +977 9860915451</a></span>
             </div>
           </div>
@@ -188,12 +188,12 @@
                 <i
                   class="fa fa-home fa-4x text-primary mb-4 d-none d-sm-block"
                 ></i>
-                <h1
+                <h2
                   class="display-2 text-uppercase text-white mb-md-4 animated slideInDown"
                   data-wow-delay="0.4s"
                 >
                   Build Your Dream House With Us
-                </h1>
+                </h2>
                 <a
                   href="contact.html"
                   class="btn btn-primary py-md-3 px-md-5 mt-2 wow fadeInRight"
@@ -216,9 +216,9 @@
                 <i
                   class="fa fa-tools fa-4x text-primary mb-4 d-none d-sm-block"
                 ></i>
-                <h1 class="display-2 text-uppercase text-white mb-md-4">
+                <h2 class="display-2 text-uppercase text-white mb-md-4">
                   Quality You Can Trust
-                </h1>
+                </h2>
                 <a
                   href="contact.html"
                   class="btn btn-primary py-md-3 px-md-5 mt-2"
@@ -254,24 +254,24 @@
     <div class="container-fluid py-6 px-5 bg-yellow">
       <div class="row g-5">
         <div class="col-lg-7">
-          <h1
+          <h2
             class="display-5 text-uppercase mb-4 wow fadeInUp"
             data-wow-delay="0.3s"
           >
             Why <span class="text-primary">Y.S. Builders?</span>
-          </h1>
+          </h2>
           <h2 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.5s">
             Since
             <span class="text-primary"> 2066 B.S.</span> (2009 A.D.)
           </h2>
-          <h2 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.5s">
+          <h3 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.5s">
             Select our construction firm for our unmatched
             <span class="text-primary">
               dedication to excellence, punctual project completion, and
               creative solutions</span
             >
             customised to fulfil your every requirement.
-          </h2>
+          </h3>
           <div class="row gx-5 py-2 wow fadeInUp" data-wow-delay="0.7s">
             <div class="col-sm-6 mb-2">
               <p class="fw-bold mb-2">
@@ -350,12 +350,12 @@
     <!-- Services Start -->
     <div class="container-fluid bg-light py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1
+        <h2
           class="display-5 text-uppercase mb-4 wow fadeInUp"
           data-wow-delay="0.3s"
         >
           Our <span class="text-primary">Services</span>
-        </h1>
+        </h2>
       </div>
       <div class="row g-5">
         <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
@@ -480,12 +480,12 @@
       <div class="row gx-5">
         <div class="col-lg-4 mb-5 mb-lg-0">
           <div class="mb-4">
-            <h1
+            <h2
               class="display-5 text-uppercase mb-4 wow fadeInUp"
               data-wow-delay="0.3s"
             >
               Get In <span class="text-primary">Touch</span>
-            </h1>
+            </h2>
           </div>
           <p class="fs-5 mb-0 wow fadeInUp" data-wow-delay="0.5s">
             Building your architectural aspirations, incrementally. Whether you
@@ -598,12 +598,12 @@
     <!-- Portfolio Start -->
     <div class="container-fluid bg-light py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1
+        <h2
           class="display-5 text-uppercase mb-4 wow fadeInUp"
           data-wow-delay="0.3s"
         >
           Some Of Our <span class="text-primary">Successfull</span> Projects
-        </h1>
+        </h2>
       </div>
       <!-- <div class="row gx-5">
             <div class="col-12 text-center">
@@ -722,12 +722,12 @@
     <!-- Testimonial Start -->
     <div class="container-fluid bg-yellow py-6 px-5">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1
+        <h2
           class="display-5 text-uppercase mb-4 wow fadeInUp"
           data-wow-delay="0.3s"
         >
           What Our <span class="text-primary">Happy Clients</span> Say!!!
-        </h1>
+        </h2>
       </div>
       <div class="row gx-0 align-items-center">
         <div
@@ -815,13 +815,13 @@
     <!-- Blog Start -->
     <div class="container-fluid py-6 px-5 bg-light">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1
+        <h2
           class="display-5 text-uppercase mb-4 wow fadeInUp"
           data-wow-delay="0.3s"
         >
           Latest <span class="text-primary">Articles</span> From
           <span class="text-primary">Our Blog</span> Post
-        </h1>
+        </h2>
       </div>
       <div class="row g-5 mb-4">
         <div class="col-lg-4 col-md-6 wow fadeInLeft" data-wow-delay="0.3s">
@@ -955,12 +955,12 @@
     <!-- Partnership Start -->
     <div class="container-fluid py-6 px-5 bg-white">
       <div class="text-center mx-auto mb-5" style="max-width: 600px">
-        <h1
+        <h2
           class="display-5 text-uppercase mb-4 wow fadeInUp"
           data-wow-delay="0.3s"
         >
           Our <span class="text-primary"> Associated Partners</span>
-        </h1>
+        </h2>
       </div>
       <div class="row g-5 mb-4">
         <div class="col-lg-2 wow fadeInUp" data-wow-delay="0.4s">
@@ -1033,12 +1033,12 @@
     <!-- Location Start -->
     <div class="container-fluid bg-yellow overflow-hidden py-1 px-lg-0">
       <div class="row g-5">
-        <h1
+        <h2
           class="display-5 text-uppercase text-center mb-4 wow fadeInUp"
           data-wow-delay="0.3s"
         >
           Latest <span class="text-primary">Our</span> Location
-        </h1>
+        </h2>
         <div
           class="col-md-12 wow fadeInDown"
           data-wow-delay="0.1s"
@@ -1068,13 +1068,13 @@
       <div class="row g-5">
         <div class="col-lg-6 pe-lg-5">
           <a href="index.html" class="navbar-brand">
-            <h1 class="m-0 display-4">
+            <h2 class="m-0 display-4">
               <img
                 style="height: 300px"
                 src="img/footer-logo.png"
                 alt="Y.S. Builders Footer Logo"
               />
-            </h1>
+            </h2>
             <!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
           </a>
           <!-- <div class="d-flex justify-content-start mt-4">
