--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>YS Builders Construction Company - About Us</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
-      content="Construction-Company-Nepal, Construction-Company-Kathmandu, Construction-Company-Nepalgunj,  "
+      content="Construction Company in Nepal, Construction Company in Kathmandu, Construction Company in Kupondole, Construction-Company-Nepalgunj, Nepal's construction industry, construction "
       name="keywords"
     />
     <meta
