--- a/service.html
+++ b/service.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <title>YS Builders Construction Company -Services</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="YS Builders Construction Company" name="keywords" />
-    <meta content="YS Builders Construction Company" name="description" />
     <meta name="keywords"
-    content="Home Inspection, Waterproofing Service in nepal, Nepal Home Inspection Service,  Kathmandu Home Inspection, Painting service in kathmandu, Plumbing services in kathmandu, Seepage Treatment services in kathmandu,  House repair service in kathmandu, renovation service in kathmandu, terrace waterproofing service in kathmandu, Construction Company in Nepal, Construction Company in Kathmandu, Construction Company in Kupondole, Construction-Company-Nepalgunj, Nepal's construction industry, construction, Sabujan Bikram Shah, Yadav Kumar Shah">
+    content="Home Inspection, Waterproofing Service in nepal, Nepal Home Inspection Service, y.s. builders, ys builders, top construction company,  Kathmandu Home Inspection, Painting service in kathmandu, Plumbing services in kathmandu, Seepage Treatment services in kathmandu, ysbuilders, House repair service in kathmandu, renovation service in kathmandu, terrace waterproofing service in kathmandu, Construction Company in Nepal, Construction Company in Kathmandu, Construction Company in Kupondole, Construction Company in Nepalgunj, Nepal's construction industry, construction, Sabujan Bikram Shah, Yadav Kumar Shah">
     <meta name="author" content="Sabujan Bikram Shah"/>
    
     <meta
@@ -22,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="About Y.S. Builders Construction Company | Located in Nepalgunj & Kathmandu"
+      content="Top Service for Construction Company | Y.S. Builders Construction Company"
     />
     <meta
       property="og:description"
@@ -45,7 +43,7 @@
     <meta name="twitter:card" content="ysbuilders-logo" />
     <meta
       name="twitter:title"
-      content="About Y.S. Builders Construction Company | Located in Nepalgunj & Kathmandu"
+      content="Top Service for Construction Company | Y.S. Builders Construction Company"
     />
     <meta
       name="twitter:description"
