--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>YS Builders Construction Company - About Us</title>
+    <title>Y.S. Builders Construction Company - About Us</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
       content="Construction Company in Nepal, Construction Company in Kathmandu, Construction Company in Kupondole, Construction-Company-Nepalgunj, Nepal's construction industry, construction "
