--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>YS Builders Construction Company | Building Excellence in Nepal</title>
+    <title>Y.S. Builders Construction Company | Building Excellence in Nepal</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
    
     <meta
