--- a/project.html
+++ b/project.html
@@ -8,12 +8,12 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
       name="keywords"
-      content="Y.S. Builders portfolio, construction projects, government construction, private sector projects, Nepal construction, highways, bridges, residential complexes, commercial buildings, industrial construction, Kupondole, Kathmandu, Nepal, Home Inspection, Waterproofing Service in nepal, Nepal Home Inspection Service, y.s. builders, ys builders, top construction company,  Kathmandu Home Inspection, Painting service in kathmandu, Plumbing services in kathmandu, Seepage Treatment services in kathmandu, ysbuilders, House repair service in kathmandu, renovation service in kathmandu, terrace waterproofing service in kathmandu, Construction Company in Nepal, Construction Company in Kathmandu, Construction Company in Kupondole, Construction Company in Nepalgunj, Nepal's construction industry, construction, Sabujan Bikram Shah, Yadav Kumar Shah"
+      content="Y.S. Builders portfolio, Top 5 best construction company in nepal, Building construction company in Kathmandu, New construction company in kathmandu, New construction company in Nepal, list of a class construction company in nepal,top 10 construction companies in nepal, best construction company in nepal, top 20 construction company in nepal, house construction company in kathmandu, construction company in kathmandu, construction projects, list of construction companies in nepal, government construction, private sector projects, Nepal construction, highways, bridges, residential complexes, commercial buildings, industrial construction, Kupondole, Kathmandu, Nepal, Home Inspection, Waterproofing Service in nepal, Nepal Home Inspection Service, y.s. builders, ys builders, top construction company,  Kathmandu Home Inspection, Painting service in kathmandu, Plumbing services in kathmandu, Seepage Treatment services in kathmandu, ysbuilders, House repair service in kathmandu, renovation service in kathmandu, terrace waterproofing service in kathmandu, Construction Company in Nepal, Construction Company in Kathmandu, Construction Company in Kupondole, Construction Company in Nepalgunj, Nepal's construction industry, construction, Sabujan Bikram Shah, Yadav Kumar Shah"
     />
     <meta name="author" content="Sabujan Bikram Shah" />
 
     <meta
-      content="Explore Y.S. Builders' portfolio of government and private sector construction projects in Nepal. From highways and bridges to residential complexes and commercial buildings, we deliver quality and innovation in every project."
+      content="Explore Y.S. Builders' portfolio of government and private sector construction projects in Nepal. From highways and bridges to residential complexes and commercial buildings,  we deliver quality and innovation in every project."
       name="description"
     />
     <link rel="canonical" href="https://www.ysbuilders.com.np/project.html" />
