--- a/index.html
+++ b/index.html
@@ -846,13 +846,13 @@
                   >
                 </div>
               </div>
-              <a href="blog-1.html">
+              <a href="why-ys-builders.html">
                 <h4 class="text-uppercase mb-3">
                   <span class="text-primary">Leading construction Company</span>
                   in Nepal
                 </h4>
               </a>
-              <a class="text-uppercase fw-bold" href="blog-1.html"
+              <a class="text-uppercase fw-bold" href="why-ys-builders.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
             </div>
@@ -881,7 +881,7 @@
                   >
                 </div>
               </div>
-              <a href="blog-2.html">
+              <a href="why-choose-pillar-construction.html">
                 <h4 class="text-uppercase mb-3">
                   <span class="text-primary"
                     >Cost of Building a House in Nepal:</span
@@ -889,7 +889,7 @@
                   Budgeting Guidelines
                 </h4>
               </a>
-              <a class="text-uppercase fw-bold" href="blog-2.html"
+              <a class="text-uppercase fw-bold" href="why-choose-pillar-construction.html"
                 >Read More <i class="bi bi-arrow-right"></i
               ></a>
             </div>
