--- a/blog.html
+++ b/blog.html
@@ -201,11 +201,11 @@
                   </div>
                 </div>
                 <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">
-                  <a href="blog-1.html">
+                  <a href="why-ys-builders.html">
                      Leading construction Company<span style="color: #F8C633;"> in Nepal</span>
                   </a>
                 </h4>
-                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="blog-1.html"
+                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="why-ys-builders.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -234,13 +234,13 @@
                     >
                   </div>
                 </div>
-                <a href="blog-2.html">
+                <a href="cost-of-building.html">
                 <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">
                   
                  <span class="text-primary"> Cost of Building a House in Nepal:</span> Budgeting Guidelines
                 </h4>
                 </a>
-                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.5s" href="blog-2.html"
+                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.5s" href="cost-of-building.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
@@ -268,12 +268,12 @@
                     >
                   </div>
                 </div>
-                <a href="blog-3.html">
+                <a href="why-choose-pillar-construction.html">
                 <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">
                   <span class="text-primary">Build Wise, Build Strong:</span> Why Choose Pillar Construction in Nepal?
                 </h4>
                 </a>
-                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="blog-3.html"
+                <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="why-choose-pillar-construction.html"
                   >Read More <i class="bi bi-arrow-right"></i
                 ></a>
               </div>
